product card design

--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,4 +1,11 @@
 .shop-container {
     display: grid;
-    grid-template-columns: 4fr 1fr;
+    grid-template-columns: 5fr 2fr;
+    padding: 20px;
+}
+
+.products-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 15px;
 }
